--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -178,7 +178,7 @@
                         <h5 class="text-capitalize">
                           <span>{{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}</span>
                           <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
-                          <span *ngIf="!utilsHelperService.isEmptyObj(item?.job_application)" class="badge badge-success applied-badge ml-1" style="font-size: 11px;padding: 3px 6px;">Applied</span>
+                          <span *ngIf="!utilsHelperService.isEmptyObj(item?.job_application)" class="badge badge-success applied-badge ml-1" style="font-size: 11px;padding: 3px 6px;">{{ item?.job_application?.status == 7 ? 'Pending' : 'Applied'}}</span>
                         </h5>
                         <!-- <h6> -->
 
