--- a/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
+++ b/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
@@ -71,7 +71,7 @@
             </div> -->
           </div>
         </div>
-        <app-shared-user-profile [userInfo]="userInfo"></app-shared-user-profile>
+        <app-shared-user-profile [userInfo]="userInfo" [isShowUserData]="isShowUserData" ></app-shared-user-profile>
 
       </div>
       <div class="col-lg-4">
