--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -1,173 +1,145 @@
 <section class="my-5">
-  <div class="container">
-    <div class="row mb-5">
-      <div class="col-lg-8 col-md-7">
-        <div class="row">
-         <!-- <div class="col-lg-5">
-            <form class="form-inline">
-              <div class="form-group">
-              <label>{{"dashboard.sortBy" | translate}} : </label>
-              </div>
-              <div class="form-group ml-2">
-              <select class="form-control form-control-sm">
-                <option>Latest</option>
-                <option>Top Matches</option>
-              </select>
-              </div>
-            </form>
-          </div> -->
-          <div class="col-lg-12 mt-3">
-            <div class="clearfix">
-              <!-- <div class="alert alert-find alert-dismissible" role="alert">
-                <a href="#" class="text-dark"> India (15) </a>
-              </div>
-              <div class="alert alert-find alert-dismissible " role="alert">
-                <a href="#" class="text-dark"> USA (12) </a>
-              </div>
-              <div class="alert alert-find alert-dismissible " role="alert">
-                <a href="#" class="text-dark"> UK (7) </a>
-              </div> -->
-              <div  *ngFor="let item of postedJobCountry; let i=index" class="alert alert-find alert-dismissible " role="alert">
-                <a style="text-transform: capitalize;color: rgb(255, 41, 114);" *ngIf="postedJobCountry.length ==1 " > {{item.country}} ({{item.count}})</a>
-                <a style="text-transform: capitalize;" *ngIf="postedJobCountry.length !=1 " (click)="ValidateByCountry(item.country,$event)"> {{item.country}} ({{item.count}})</a>
-              </div>
-            </div>
-          </div> 
-	  </div>
-        <ng-container *ngIf="postedJobs.length > 0; else elseTemplate">
-          <div class="row mt-4 mb-4" *ngFor="let item of postedJobs; let i=index">
-            <div class="col-lg-12">
-              <div class="card job-card">
-                <div class="card-body">
-                  <div class="clearfix">
-                    <div class="float-left">
-                      <a href="javascript:;"  [routerLink]="[ '/user/job-matches/details' ]" [queryParams]="{id: item?.id }"
-					 >
-                        <h5 class="text-capitalize">{{item?.title}}</h5>
-                      </a>
-                    </div>
-                    <div class="float-right">
-                      <button [ngClass]="{'applied-btn-green': (item?.is_job_applied  || (currentJobDetails?.id == item?.id && !isOpenedResumeSelectModal)), 'btn-outline-green': !item?.is_job_applied}" [disabled]="item?.is_job_applied || (currentJobDetails?.id == item?.id && !isOpenedResumeSelectModal)" type="button" class="btn btn-sm" (click)="onToggleResumeSelectModal(true, item)"> <i class="fas fa-check"></i>
-                         {{(item?.is_job_applied || (currentJobDetails?.id == item?.id && !isOpenedResumeSelectModal)) ? 'Applied' : 'Apply Now'}}
-                      </button>
-                    </div>
-                  </div>
-                  <div class="media">
-                    <div class="media-body">
-                      <h6 class="text-capitalize">
-                        {{item?.company?.company}}
-                      </h6>
-                      <h6 class="text-capitalize">
-                        {{item?.city ? item?.city + ', ' : ''}}
-                        {{item?.state ? item?.state + ', ' : ''}}
-                        <span >
-                          {{item?.country ? item?.country : ''}}
-                        </span>
-                      </h6>
-                      <h6>{{item?.experience ? item?.experience + ' Years Exp.' : ''}} <span *ngIf="item?.type">{{' , '}}</span>{{item?.type ? sharedService.onGetJobType(item?.type) : ''}} <span *ngIf="item?.remote" class="remote pl-2">Remote</span></h6>
-                      <div class="mt-2">
-						<!-- <ng-container *ngIf="item?.hands_on_experience?.length; else elseHandsTemplate">
-							<ng-container *ngFor="let items of item?.hands_on_experience; let i = index" >
-								<span class="sap-badge"> {{items?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(items?.skill_id)?.tag) : '--'}} </span>
-							</ng-container>
-						</ng-container>
-						<ng-template #elseHandsTemplate>
-							<span  class="sap-badge">--</span>
-						</ng-template> -->
-                        <ng-container *ngFor="let itemSub of item?.skills">
-                          <span *ngIf="itemSub" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag)}}</span>
-                        </ng-container>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </ng-container>
-        <ng-template #elseTemplate>
-          <p>No Jobs Found</p>
-        </ng-template>
-		<div class="d-flex justify-content-center" style="background: #f8f8f8;"  *ngIf="postedJobMeta?.count > 0 && postedJobMeta?.total > 10" >
-		<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
-    [length]="length"
-    [pageSize]="limit"  [pageSizeOptions]="pageSizeOptions"
-    [pageIndex]="page-1">
-</mat-paginator>
-</div>
-        <!-- <div class="d-flex justify-content-center" *ngIf="((postedJobMeta?.count > 0 && postedJobMeta?.total > 25) && (postedJobMeta?.total != postedJobs?.length))">
-          <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
-            Load More
-          </button>
-        </div> -->
-      </div>
-      <div class="col-lg-4 col-md-5">
-        <div class="title">
-          <h2>Filter
-            <button *ngIf="customObject?.keys(utilsHelperService.clean(tempQueryParams))?.length > 2" (click)="onClearFilter()" class="btn btn-sm btn-theme-blue ml-2 float-right" type="button">
-              <i class="fa fa-times" aria-hidden="true"></i>Clear
-            </button>
-          </h2>
-
-        </div>
-        <div class="sidebar-widget text-left">
-        <div class=" my-scrollbar">
-          <div class="card">
-            <div class="card-header" data-toggle="collapse" data-target="#collapseExperience" aria-expanded="false" aria-controls="collapseExperience">
-              Experience <i class="fas fa-angle-down float-right pt-1"></i>
-            </div>
-            <div class="card-body collapse multi-collapse show" id="collapseExperience">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item" *ngFor="let item of experienceFilter; let i=index">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" [checked]="onCheckExpDefault(item)" (change)="onFiltertByExperience(item)" class="custom-control-input" id="experienceCheck_{{i}}">
-                    <label class="custom-control-label" for="experienceCheck_{{i}}">{{item?.text}} </label>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="card mt-4">
-            <div class="card-header" data-toggle="collapse" data-target="#collapseJoptype" aria-expanded="false" aria-controls="collapseJoptype">
-              Job Type  <i class="fas fa-angle-down float-right pt-1"></i>
-            </div>
-            <div [ngClass]="{'show': queryParams?.type}" class="card-body collapse multi-collapse" id="collapseJoptype">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item" *ngFor="let item of sharedService.onGetJobType(); let i=index">
-                  <div class="custom-control custom-checkbox">
-                    <input [value]="item.id" [checked]="queryParams?.type?.includes(item.id)" (change)="onFiltertByJobType('type', item.id)" type="checkbox" class="custom-control-input" id="customCheck_{{i}}">
-                    <label class="custom-control-label" for="customCheck_{{i}}">{{item.text}} </label>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="card mt-4">
-            <div class="card-header" data-toggle="collapse" data-target="#collapseSalary" aria-expanded="false" aria-controls="collapseSalary">
-              Salary  <i class="fas fa-angle-down float-right pt-1"></i>
-            </div>
-            <div [ngClass]="{'show': (queryParams?.min_salary && queryParams?.max_salary)}" class="card-body p-3 collapse multi-collapse" id="collapseSalary">
-              <ngx-slider (userChangeEnd)="onFilterWithSalary($event)" [(value)]="minSalary" [(highValue)]="maxSalary" [options]="options"></ngx-slider>
-            </div>
-          </div>
-          <div class="card mt-4">
-            <div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
-              SAP Skills  <i class="fas fa-angle-down float-right pt-1"></i>
-            </div>
-            <div [ngClass]="{'show': skills?.length}" class="card-body p-3 collapse multi-collapse" id="collapseSkills">
-              <div class="skill-select">
-                <div class="custom-control custom-checkbox mb-2" *ngFor="let item of skillItems?.items; let i=index">
-                  <input [checked]="skills?.includes(customParseInt(item?.id))" (change)="onFiltertBySkill(item)" class="custom-control-input  mb-0" type="checkbox" id="Check_{{i}}" name="example1">
-                  <label class="custom-control-label  mb-0" for="Check_{{i}}">{{utilsHelperService.onSplitTag(item?.tag)}} </label>
-                </div>
-              </div>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="row mb-5">
+			<div class="col-lg-8 col-md-7">
+				<div class="row">
+					<div class="col-lg-12 mt-3">
+						<div class="clearfix">
+							<div  *ngFor="let item of postedJobCountry; let i=index" class="alert alert-find alert-dismissible " role="alert">
+								<a style="text-transform: capitalize;color: rgb(255, 41, 114);" *ngIf="postedJobCountry.length ==1 " > {{item.country}} ({{item.count}})</a>
+								<a style="text-transform: capitalize;" *ngIf="postedJobCountry.length !=1 " (click)="ValidateByCountry(item.country,$event)"> {{item.country}} ({{item.count}})</a>
+							</div>
+						</div>
+					</div> 
+				</div>
+				<ng-container *ngIf="postedJobs.length > 0; else elseTemplate">
+					<div class="row mt-4 mb-4" *ngFor="let item of postedJobs; let i=index">
+						<div class="col-lg-12">
+							<div class="card job-card">
+								<div class="card-body">
+									<div class="clearfix">
+										<div class="float-left">
+											<a href="javascript:;"  [routerLink]="[ '/user/job-matches/details' ]" [queryParams]="{id: item?.id }">
+												<h5 class="text-capitalize">{{item?.title}}</h5>
+											</a>
+										</div>
+										<div class="float-right">
+											<button [ngClass]="{'applied-btn-green': (item?.is_job_applied  || (currentJobDetails?.id == item?.id && !isOpenedResumeSelectModal)), 'btn-outline-green': !item?.is_job_applied}" [disabled]="item?.is_job_applied || (currentJobDetails?.id == item?.id && !isOpenedResumeSelectModal)" type="button" class="btn btn-sm" (click)="onToggleResumeSelectModal(true, item)"> <i class="fas fa-check"></i>
+												{{(item?.is_job_applied || (currentJobDetails?.id == item?.id && !isOpenedResumeSelectModal)) ? 'Applied' : 'Apply Now'}}
+											</button>
+										</div>
+									</div>
+									<div class="media">
+										<div class="media-body">
+											<h6 class="text-capitalize">
+												{{item?.company?.company}}
+											</h6>
+											<h6 class="text-capitalize">
+												{{item?.city ? item?.city + ', ' : ''}}
+												{{item?.state ? item?.state + ', ' : ''}}
+												<span >
+													{{item?.country ? item?.country : ''}}
+												</span>
+											</h6>
+											<h6>
+												{{item?.experience ? item?.experience + ' Years Exp.' : ''}} <span *ngIf="item?.type">{{' , '}}</span>{{item?.type ? sharedService.onGetJobType(item?.type) : ''}} 
+												<span *ngIf="item?.remote" class="remote pl-2">Remote</span>
+											</h6>
+											<div class="mt-2">
+												<ng-container *ngFor="let itemSub of item?.skills">
+													<span *ngIf="itemSub" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag)}}</span>
+												</ng-container>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</ng-container>
+				<ng-template #elseTemplate>
+					<p>No Jobs Found</p>
+				</ng-template>
+				<div class="d-flex justify-content-center" style="background: #f8f8f8;"  *ngIf="postedJobMeta?.count > 0 && postedJobMeta?.total > 10" >
+					<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
+						[length]="length"
+						[pageSize]="limit"  [pageSizeOptions]="pageSizeOptions"
+						[pageIndex]="page-1">
+					</mat-paginator>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-5">
+				<div class="title">
+					<h2>Filter
+						<button *ngIf="customObject?.keys(utilsHelperService.clean(tempQueryParams))?.length > 2" (click)="onClearFilter()" class="btn btn-sm btn-theme-blue ml-2 float-right" type="button">
+							<i class="fa fa-times" aria-hidden="true"></i>Clear
+						</button>
+					</h2>
+				</div>
+				<div class="sidebar-widget text-left">
+					<div class=" my-scrollbar">
+						<div class="card">
+							<div class="card-header" data-toggle="collapse" data-target="#collapseExperience" aria-expanded="false" aria-controls="collapseExperience">
+								Experience 
+								<i class="fas fa-angle-down float-right pt-1"></i>
+							</div>
+							<div class="card-body collapse multi-collapse show" id="collapseExperience">
+								<ul class="list-group list-group-flush">
+									<li class="list-group-item" *ngFor="let item of experienceFilter; let i=index">
+										<div class="custom-control custom-checkbox">
+											<input type="checkbox" [checked]="onCheckExpDefault(item)" (change)="onFiltertByExperience(item)" class="custom-control-input" id="experienceCheck_{{i}}">
+											<label class="custom-control-label" for="experienceCheck_{{i}}">{{item?.text}} </label>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="card mt-4">
+							<div class="card-header" data-toggle="collapse" data-target="#collapseJoptype" aria-expanded="false" aria-controls="collapseJoptype">
+								Job Type  
+								<i class="fas fa-angle-down float-right pt-1"></i>
+							</div>
+							<div [ngClass]="{'show': queryParams?.type}" class="card-body collapse multi-collapse" id="collapseJoptype">
+								<ul class="list-group list-group-flush">
+									<li class="list-group-item" *ngFor="let item of sharedService.onGetJobType(); let i=index">
+										<div class="custom-control custom-checkbox">
+											<input [value]="item.id" [checked]="queryParams?.type?.includes(item.id)" (change)="onFiltertByJobType('type', item.id)" type="checkbox" class="custom-control-input" id="customCheck_{{i}}">
+											<label class="custom-control-label" for="customCheck_{{i}}">{{item.text}} </label>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="card mt-4">
+							<div class="card-header" data-toggle="collapse" data-target="#collapseSalary" aria-expanded="false" aria-controls="collapseSalary">
+								Salary 
+								<i class="fas fa-angle-down float-right pt-1"></i>
+							</div>
+							<div [ngClass]="{'show': (queryParams?.min_salary && queryParams?.max_salary)}" class="card-body p-3 collapse multi-collapse" id="collapseSalary">
+								<ngx-slider (userChangeEnd)="onFilterWithSalary($event)" [(value)]="minSalary" [(highValue)]="maxSalary" [options]="options"></ngx-slider>
+							</div>
+						</div>
+						<div class="card mt-4">
+							<div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
+								SAP Skills  
+								<i class="fas fa-angle-down float-right pt-1"></i>
+							</div>
+							<div [ngClass]="{'show': skills?.length}" class="card-body p-3 collapse multi-collapse" id="collapseSkills">
+								<div class="skill-select">
+									<div class="custom-control custom-checkbox mb-2" *ngFor="let item of skillItems?.items; let i=index">
+										<input [checked]="skills?.includes(customParseInt(item?.id))" (change)="onFiltertBySkill(item)" class="custom-control-input  mb-0" type="checkbox" id="Check_{{i}}" name="example1">
+										<label class="custom-control-label  mb-0" for="Check_{{i}}">
+											{{utilsHelperService.onSplitTag(item?.tag)}} 
+										</label>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
 
