--- a/frontend/src/app/modules/features/user/modal/resume-select/resume-select.component.html
+++ b/frontend/src/app/modules/features/user/modal/resume-select/resume-select.component.html
@@ -79,3 +79,18 @@
   </form>
 
 </ng-template>
+
+<ng-template #openSuccessPopup let-modal>
+	<div class="modal-content">
+		<div class="modal-body text-center">
+			<h1 class="text-green mx-auto pt-4"><i class="far fa-check-circle"></i></h1>
+			<h6 class="mt-3">You have successfully applied to {{currentJobDetails.title}} Position</h6>
+		</div>
+		<div class="modal-footer">
+			<div class=" mx-auto">
+				<button type="button" class="btn btn-theme-blue" style="margin-right:10px;" (click)="onClickCloseBtnStatus()"  data-dismiss="modal">Ok</button>
+				<button type="button" class="btn btn-theme-green"  (click)="navigateMatches()" >Go to Matches</button>
+			</div>
+		</div>
+	</div>
+</ng-template>
