--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -9,7 +9,7 @@
 								<th scope="col">{{"postJob.jobTitle" | translate}}</th>
 								<th scope="col">{{"dashboard.employer" | translate}}</th>
 								<th scope="col">{{"postJob.location" | translate}}</th>
-								<th scope="col">{{"dashboard.postedDated" | translate}}</th>
+								<th scope="col">Applied Date</th>
 								<th scope="col">{{"dashboard.status" | translate}}</th>
 								<!--  <th scope="col" class="text-center">{{"dashboard.action" | translate}}</th> -->
 							</tr>
@@ -33,9 +33,9 @@
 										</span>
 									</td>
 									<td>
-										{{item?.job_posting?.created_at ? (item?.job_posting?.created_at | date: "MMM dd, y") : '-'}}
+										{{item?.created_at ? (item?.created_at | date: "MMM dd, y") : '-'}}
 									</td>
-									<td  class="text-capitalize text-warning" *ngIf="item?.status == 1 && !item?.short_listed" style="color: #385edf;">
+									<td  class="text-capitalize text-warning" *ngIf="item?.status == 1 && item?.short_listed == null " style="color: #385edf;">
 										Applied
 									</td>
 									<td  class="text-capitalize text-danger" *ngIf="item?.status == 1 && item?.short_listed == false " style="color: #385edf;">
